tests/baselines/reference/parserAccessors10.errors.txt
parserAccessors10.ts(2,3): error TS1042: 'public' modifier cannot be used here.
parserAccessors10.ts(2,14): error TS2378: A 'get' accessor must return a value.


==== parserAccessors10.ts (2 errors) ====
    var v = {
      public get foo() { }
      ~~~~~~
!!! error TS1042: 'public' modifier cannot be used here.
                 ~~~
!!! error TS2378: A 'get' accessor must return a value.
    };